Refactor auth routes out of users
